--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "embedme",
   "version": "0.0.0-development",
   "description": "Utility for embedding code snippets into markdown documents",
-  "repository": "https://github.com/zakhenry/embedme",
-  "author": "Zak Henry",
+  "repository": "https://github.com/astridx/embedme",
+  "author": "Zak Henry modified by Astrid Günther",
   "license": "MIT",
   "private": false,
   "bin": "./dist/embedme.js",
@@ -42,6 +42,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "chalk": "3.0.0",
     "commander": "5.1.0",
     "gitignore-parser": "~0.0.2",
